--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -179,6 +179,184 @@
     margin-top: 15px;
 }
 
+.desc-not-found {
+    margin-top: 8px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: #000000;
+}
+
+.not-fonud-title {
+    margin-top: 22px;
+    font-family: Syne;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    color: #121212;
+}
+
+.menu-not-found {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.pagination {
+    margin-top: 68px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination div {
+    display: flex;
+}
+
+.active-btn-pag {
+    background: #000000;
+    color: #ffd600;
+    font-weight: bold;
+}
+
+.btn-pagination {
+    outline: none !important;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 18px;
+    padding-right: 18px;
+    border: 1px solid #c4c4c4;
+    box-sizing: border-box;
+    border-radius: 8px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.control-pagination {
+    outline: none !important;
+    background: #fff1bf;
+    border-radius: 8px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.text-price {
+    font-family: Druk Text Wide;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 16px;
+    color: #000000;
+    background: #ffd600;
+    border-radius: 8px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.text-category {
+    color: #78909c;
+}
+
+.footer-card {
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.img-card {
+    width: 330px;
+    height: 287px;
+}
+
+.show-menu-card {
+    margin-left: 59px;
+    margin-right: 59px;
+}
+
+.active-filter {
+    background-size: 20px 8px !important;
+}
+
+.show-categories {
+    margin-left: 43px;
+}
+
+.show-categories-button {
+    outline: none !important;
+    margin-right: 40px;
+    outline: none;
+    font-family: Syne;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17px;
+    line-height: 22px;
+    /*Effects*/
+    background: linear-gradient(to bottom, #ffd600 0%, #ffd600 100%);
+    background-position: 0 50%;
+    background-repeat: repeat-x;
+    background-size: 4px 0px;
+    transition: background-size 0.4s;
+}
+
+.show-categories-button:hover {
+    background-size: 20px 8px;
+}
+
+.search-food {
+    outline: none;
+    background: #f8f8f8;
+    border: 1px solid #c4c4c4;
+    box-sizing: border-box;
+    border-radius: 8px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 63px;
+    width: 467px;
+}
+
+.input-search-menu {
+    position: relative;
+}
+
+.input-search-menu i {
+    position: absolute;
+    left: 18px;
+    top: 15px;
+    color: #000000;
+}
+
+.menu-items-filters {
+    position: relative;
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-top: 80px;
+    margin-bottom: 96px;
+    display: flex;
+    align-items: center;
+}
+
+.container-landing-menu {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: local;
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/josueayala27-49da6.appspot.com/o/bg-home-landing-menu.png?alt=media&token=41034ef1-4c7a-4bc1-b1c0-14a56ca93442");
+}
+
 .active {
     background-color: #000000;
     color: white !important;
@@ -521,13 +699,34 @@ textarea {
 }
 
 @media screen and (min-width: 768px) {
-    .img-media {}
+    .bx-slider {
+        display: none;
+    }
 }
 
 
 /*Dispositivo mediano*/
 
 @media screen and (min-width: 640px) and (max-width: 768px) {
+    .menu-items-filters {
+        flex-direction: column;
+    }
+    .show-categories-button {
+        font-size: 17.5px;
+        line-height: 22px;
+    }
+    .show-categories {
+        margin-top: 44px;
+        margin-left: 43px;
+    }
+    .menu-items-filters {
+        margin-top: 30px;
+        width: 100%;
+        margin-left: 0px;
+    }
+    .pagination {
+        margin-top: 64px;
+    }
     .contact-form {
         flex-direction: column;
         margin-right: 67px;
@@ -656,12 +855,108 @@ textarea {
     .router-link-active {
         background-size: 4px 6px;
     }
+    .bx-slider {
+        display: none;
+    }
 }
 
 
 /*Dispositivo de telefono*/
 
 @media screen and (max-width: 640px) {
+    /*transitions*/
+    .slide-fade-enter-active {
+        transition: all 0.3s ease;
+    }
+    .slide-fade-leave-active {
+        transition: all 0.3s ease;
+    }
+    .slide-fade-enter,
+    .slide-fade-leave-to
+    /* .slide-fade-leave-active below version 2.1.8 */
+    {
+        transform: translateY(-10px);
+        opacity: 0;
+    }
+    .title-filter {
+        color: #ffd600;
+        font-size: 25px;
+        line-height: 25px;
+    }
+    .phone-menu {
+        padding-top: 47px;
+        z-index: 100;
+        position: absolute;
+        background-color: black;
+        font-family: Syne;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 25px;
+        line-height: 30px;
+        color: #ffffff;
+        padding-left: 17px;
+        border-radius: 0px 0px 30px 30px;
+        width: 100%;
+        padding-bottom: 63px;
+    }
+    .menu-items-filters {
+        margin-top: 25px;
+        margin-left: 0px;
+        margin-bottom: 40px;
+        margin-left: 16px;
+    }
+    .bx-slider {
+        margin-left: 10px;
+    }
+    .categories-phone {
+        align-items: flex-start;
+        display: flex;
+        flex-direction: column;
+    }
+    .categories-phone button {
+        margin-top: 25px;
+    }
+    .active-filter {
+        background-size: 10px 4px !important;
+        background-position: 0 80%;
+    }
+    .header-menu-filter {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .header-menu-filter i {
+        margin-right: 21px;
+    }
+    .show-categories-button {
+        font-size: 17.5px;
+        line-height: 22px;
+    }
+    .show-categories {
+        margin-top: 44px;
+        margin-left: 43px;
+    }
+    .search-food {
+        width: 295px;
+        margin-right: 0px;
+    }
+    .show-categories {
+        display: none;
+    }
+    .pagination {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .control-pagination {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        width: 132px;
+    }
+    .show-menu-card {
+        margin-left: 22px;
+        margin-right: 11px;
+    }
     .title-contact {
         margin-top: 73px;
     }
